# XMIDIX

./: .gitignore  CMakeLists.txt  README.md  xmidix.cc  xmidix.ui  xmidix_config.cc  xmidix_config.h  xmidix_config.ui  xmidix_file.cc  xmidix_file.h  xmidix_piano.cc  xmidix_piano.h  xmidix_player.cc  xmidix_player.h  xmidix_playlist.cc  xmidix_playlist.h  xmidix_seq.cc  xmidix_seq.h  xmidix_vu.cc  xmidix_vu.h  xmidixed.cc  xmidixed.h  xmidixed.ui
cmake/: Midifile.cmake  XMIDIXED.cmake
resources/: resources.qrc  xmidix.desktop
test/: test.mid  test2.mid  test3.mid
